# debug3

./: Cargo.toml  README.md  foo.rs  foo.txt
.github/workflows/: ci.yaml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: derive.rs  macro.rs
generator/: Cargo.toml  config.toml
generator/src/: generator.rs  json_loader.rs  main.rs
src/: algorithm.rs  builders.rs  convenience.rs  formatter.rs  lib.rs  macros.rs  ring.rs  std_impls.rs  write.rs
src/builders/: list.rs  map.rs  named_list.rs  pad.rs  set.rs  strukt.rs  tuple.rs
src/gen_impls/: aws_sdk_ec2.rs  aws_smithy_types.rs  bytes.rs  dashmap.rs  hashbrown.rs  kdl.rs  libipld_core.rs  miette.rs  mod.rs  proc_macro2.rs  pulldown_cmark.rs  rustdoc_types.rs  serde_json.rs  smallvec.rs  syn.rs  ungrammar.rs
src/hand_impls/: aws_sdk_ec2.rs  aws_smithy_types.rs  bytes.rs  cid.rs  dashmap.rs  hash_brown.rs  kdl.rs  miette.rs  mod.rs  proc_macro2.rs  pulldown_cmark.rs  rustdoc_types.rs  serde_json.rs  smallvec.rs  syn.rs  tree_sitter.rs  ungrammar.rs
tests/: algo.rs  builder.rs  derive.rs  foo.json  fxhash.rs  kdl.rs  motivating.rs  rustdoc_types.rs  serde_json.rs  std.rs  syn.rs  ui.rs
tests/it/: algo.rs  builder.rs  derive.rs  foo.txt  fxhash.rs  kdl.rs  main.rs  motivating.rs  pulldown_cmark.rs  serde_json.rs  std.rs  syn.rs  tree_sitter.rs  ui.rs  ungrammar.rs
tests/it/ui/: debug_not_field.stderr  no_generic.rs  no_generic.stderr  unused_fields.rs  unused_fields.stderr
tests/ui/: debug_not_field.rs  debug_not_field.stderr  no_generic.stderr
