[package]
name = "debug3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Space Efficient Pretty Printer"
repository = "https://github.com/aDotInTheVoid/debug3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Real Deps
# TODO: Make derive optional
debug3-derive = { version = "0.1.0", path = "derive" }
# Foreign Impls
aws-sdk-ec2 = { version = "0.15.0", optional = false }
aws-smithy-types = { version = "0.45.0", optional = false }
bytes = { version = "1.1.0", optional = false }
dashmap = { version = "5.3.4", optional = false }
hashbrown = { version = "0.12.1", optional = false }
proc-macro2 = { version = "1.0.40", features = ["span-locations"], optional = false }
rustdoc-types = { version = "0.11.0", optional = false }
serde_json = { version = "1.0.79", optional = false }
smallvec = { version = "1.9.0", optional = false }
syn = { version = "1.0.98", features = ["full"], optional = false }

[workspace]
members = [
    ".",
    "./derive"
]

exclude = ["generator"]

[dev-dependencies]
trybuild = "1.0.56"
rustversion = "1.0.6"
serde_json = "1.0.79"
expect-test = "1.2.2"
fxhash = "0.2.1"

[features]
