[package]
name = "debug3"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Space Efficient Pretty Printer"
repository = "https://github.com/aDotInTheVoid/debug3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Real Deps
# TODO: Make derive optional
debug3-derive = { version = "0.1.0", path = "derive" }
# Foreign Impls
aws-sdk-ec2 = { version = "0.15.0", optional = true }
aws-smithy-types = { version = "0.45.0", optional = true }
bytes = { version = "1.1.0", optional = true }
dashmap = { version = "5.3.4", optional = true }
hashbrown = { version = "0.12.1", optional = true }
kdl = { version = "4.3.0", optional = true }
miette = { version = "4.7.0", optional = true }
proc-macro2 = { version = "1.0.40", features = ["span-locations"], optional = true }
rustdoc-types = { version = "0.11.0", optional = true }
serde_json = { version = "1.0.82", optional = true }
smallvec = { version = "1.9.0", optional = true }
syn = { version = "1.0.98", features = ["full"], optional = true }

[features]
kdl = ["dep:kdl", "miette"] # KDL's error has miette

[workspace]
members = [
    ".",
    "./derive"
]

exclude = ["generator"]

[dev-dependencies]
trybuild = "1.0.63"
rustversion = "1.0.7"
serde_json = "1.0.82"
expect-test = "1.3.0"
fxhash = "0.2.1"
