[package]
name = "debug3"
version = "0.4.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Space Efficient Pretty Printer"
repository = "https://github.com/aDotInTheVoid/debug3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Real Deps
# TODO: Make derive optional
debug3-derive = { version = "0.4.0", path = "derive" }
# Foreign Impls
aws-sdk-ec2 = { version = "0.15.0", optional = true }
aws-smithy-types = { version = "0.45.0", optional = true }
bytes = { version = "1.1.0", optional = true }
dashmap = { version = "5.3.4", optional = true }
hashbrown = { version = "0.12.1", optional = true }
# 4.4.0 was breaking, as it bumped miette 4->5 
# https://github.com/kdl-org/kdl-rs/blob/main/CHANGELOG.md#440-2022-08-18
kdl = { version = "4.4.0", optional = true } 
miette = { version = "5.3.0", optional = true }
proc-macro2 = { version = "1.0.40", features = ["span-locations"], optional = true }
rustdoc-types = { version = "0.11.0", optional = true }
serde_json = { version = "1.0.82", optional = true }
smallvec = { version = "1.9.0", optional = true }
syn = { version = "1.0.98", features = ["full"], optional = true }
ungrammar = { version = "1.16.1", optional = true }
pulldown-cmark = { version = "0.9.2", optional = true, default-features = false }
libipld-core = { version = "0.16.0", optional = true }
cid = { version = "0.10.1", optional = true }

[features]
kdl = ["dep:kdl", "miette"] # KDL's error has miette
syn = ["dep:syn", "proc-macro2"] # Syn's Ident has proc-macro2
aws-sdk-ec2 = ["dep:aws-sdk-ec2", "aws-smithy-types"] # AWS crates use aws-smithy-types as core.
libipld-core = ["dep:libipld-core", "cid"]
cid = ["dep:cid"]

[workspace]
members = [
    ".",
    "./derive"
]

exclude = ["generator"]

[dev-dependencies]
trybuild = "1.0.77"
rustversion = "1.0.7"
serde_json = "1.0.82"
expect-test = "1.3.0"
fxhash = "0.2.1"
