[package]
name = "debug3-derive"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive macro for debug3"
repository = "https://github.com/aDotInTheVoid/debug3/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"
synstructure = "0.12.6"
