[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
fs-err = "2.7.0"
rustdoc-types = "0.10.0"
serde = "1.0.136"
serde_json = "1.0.79"
toml = "0.5.9"
